--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-V1GCTC2DK4"></script>
+      <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){
+              dataLayer.push(arguments);
+          }
+          gtag('js', new Date());
+          gtag('config', 'G-V1GCTC2DK4');
+      </script>
+
+
   </head>
   <body>
     <noscript>
